--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
         <!-- Please mention in NOTES.md your rationale for any dependencies you add here -->
 
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
